@@ -13,8 +13,10 @@
 	<version>1.6.0</version>
 	<description>This module allows the displaying of a syndicated feed</description>
 	<files>
-		<filename
-			module="mod_feed">mod_feed.php</filename>
+		<filename module="mod_feed">mod_feed.php</filename>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+		<folder>tmpl</folder>
 	</files>
 	<fields>
 		<field
