@@ -13,8 +13,10 @@
 	<version>1.6.0</version>
 	<description>DESCLOGINFORM</description>
 	<files>
-		<filename
-			module="mod_login">mod_login.php</filename>
+		<filename module="mod_login">mod_login.php</filename>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+		<folder>tmpl</folder>
 	</files>
 	<fields>
 		<field
