@@ -13,9 +13,11 @@
 	<version>1.6.0</version>
 	<description>This module shows the main admin navigation module</description>
 	<files>
-		<filename
-			module="mod_menu">mod_menu.php</filename>
+		<filename module="mod_menu">mod_menu.php</filename>
 		<filename>menu.php</filename>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+		<folder>tmpl</folder>
 	</files>
 	<fields
 		group="advanced">
