@@ -13,8 +13,10 @@
 	<version>1.6.0</version>
 	<description>This module shows a list of unread items</description>
 	<files>
-		<filename
-			module="mod_unread">mod_unread.php</filename>
+		<filename module="mod_unread">mod_unread.php</filename>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+		<folder>tmpl</folder>
 	</files>
 	<fields
 		group="advanced">
